<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KFG App</string>
    <string name="kfg_standins">KFG Stand-ins</string>
    <string name="main_activity">KFGNaplo &amp; Stand-ins</string>
    <string name="account_name">KFG Kréta Account</string>
    <string name="account_type" translatable="false">hu.kfg.naplo.MAIN_ACCOUNT</string>
    <string name="instructions"><![CDATA[<b>Read me!</b><br/>How to use E-Kréta:<br/>
    1. Enter your username and password<br/>
    a) Your username is your <b>OM ID</b> by default<br/>
    b) Your password is your birth-date in
    <b>YYYY-MM-DD</b> or <b>YYYYMMDD</b> format<br/>
    2. You should get a feedback in a few moments if network is available<br/>
    3. If your username or password is incorrect, repeat step 1-2!]]></string>
    <string name="insert_code">GYIA code required!</string>
    <string name="click2edit">Click here to edit</string>
    <string name="copythelink">Copy the link found in the GYIA code! (click here)</string>
    <string name="invalid_url">Invalid url!</string>
    <string name="checking_now">Checking…</string>
    <string name="no_network_conn">Network connection is not available!</string>
    <string name="about">About</string>
    <string name="enable_notifications">Turn on notifications</string>
    <string name="interval">Check for changes</string>
    <string name="vibrate">Vibrating notifications</string>
    <string name="light">Notification light</string>
    <string name="nightmode">Sleep-friendly mode</string>
    <string name="nightmode_explained">Notifications between 22:00 and 6:00 do not vibrate and flash LED even if it is set</string>
    <string name="manual">Manual check</string>
    <string name="browser">Open E-Kréta in browser</string>
    <string name="info" translatable="false">Info</string>
    <string name="find_changes_now">Find changes now</string>
    <string name="cannot_reach_site">Cannot reach KFG Naplo site!</string>
    <string name="unknown_error">Unknown error in Karinthy Naplo!  Consider trying it again later!</string>
    <string name="wrong_username_not">You entered wrong username or password combination! Click on the notification to edit</string>
    <string name="no_new_grade">You haven\'t got a new grade!</string>
    <string name="unknown_change">Something has changed, most likely a grade had been corrected</string>
    <string name="new_grade">You got a new grade!</string>
    <string name="open">Open Naplo</string>
    <string name="about_text">&lt;b>Developer:&lt;/b>&lt;br/>Cseh András&lt;br/>&lt;b>App version:&lt;/b>&lt;br/>%1$s&lt;br/>Icons by: Freepik &amp; ToffeeNut&lt;br/>Uses Android-Job by evernote&lt;br/>&lt;i>Unofficial app!&lt;i/></string>
    <string name="error_no_grades">No grades were found! If you do have some, try it again later!</string>
    <string name="title_activity_table_view">My grades</string>
    <string name="update_grades"><![CDATA[Do you want to update the grades database?<br/>It does not update automatically!]]></string>
    <string name="update">Update</string>
    <string name="not_now">Not now</string>
    <string name="upgrading">Fetching grades, please wait…</string>
    <string name="emptydb">It looks like you have no grades yet…</string>
    <string name="subjects">Subjects</string>
    <string name="ohno">Oh no! Something went wrong!</string>
    <string name="average">Avg.</string>
    <string name="refresh">Reload data</string>
    <string name="job_name">Job trigger</string>
    <string name="table">Tables</string>
    <string name="grades_expl">Ordered by subject, with averages, click on grades for details</string>
    <string name="grades_long">Grades in table, ordered by subject and date</string>
    <string name="apprx">About %1$s</string>
    <string name="grades_info_menu"><![CDATA[Your grades are in descending order, ordered by date.
    Click on them to see more details, eg. the exact date or teacher.<br/>
    Click on the refresh icon, to re-download all your grades.<br/>
    By clicking on the pin icon, you can remove or move the grades shortcut to the homescreen (turned on by default).]]></string>
    <string name="grade_table">Show in table</string>
    <string name="battery_opt">In order for Karinthy Napló to work properly, please add it to the list of NOT OPTIMIZED, WHITELISTED or PROTECTED apps</string>
    <string name="battery_opt_err">Oh shoot! You need to open the settings app and manually add Karinthy Napló to the whitelisted apps :(</string>
    <string name="battery_opt_err_huawei">Oh shoot! You need to open the settings app and manually add Karinthy Napló to the protected apps :(</string>
    <string name="no_new_substitution">No new substitution in your class!</string>
    <string name="new_substitution">There is a new substitution in your class!</string>
    <string name="substitution_canceled">Change! Some of your previously announced classes will be held!</string>
    <string name="substitution_canceled_and_new">There is a new substitution, but also something has changed!</string>
    <string name="open_site">Open</string>
    <string name="yourclass">Class: </string>
    <string name="yourclass_sum">STANDINS: Type in your class (using capital letters) eg. 9.AK/10.A</string>
    <string name="mode">Notifications</string>
    <string name="standins">Standins</string>
    <string name="grades">Grades</string>
    <string name="ignore">Lessons to be ignored</string>
    <string name="ignore_sum">STANDINS: Type in here those lessons of which you don\'t want to get a notification (separated by comma, use accented letters)</string>
    <string name="open_standins">Open Stand-ins page in browser</string>
    <string name="lyukasora">FREE-PERIOD</string>
    <string name="next_time">Show next time</string>
    <string name="hide_forever">I don\'t care</string>
    <string name="insert_class">Fill in the class field! (use capital letters!)</string>
    <string name="teacher">Standins - teacher</string>
    <string name="teacher_hint">Standins - teacher: Enter your name here. If your name may be displayed other ways, separate those by comma (strongly recommended!)</string>
    <string name="teacher_name">Teacher name: </string>
    <string name="no_new_substitution2">There is no new substitution for you!</string>
    <string name="new_substitution2">You have a new substitution!</string>
    <string name="battery_opt_huawei_26">In order for Karinthy Napló to work properly on Huawei devices, additional settings need to be done. Please, in the next screen set KFGapp to manual control, but leave all other boxes enabled!</string>
    <string name="battery_opt_err_huawei_26">Oh no, it did not work :(. Open settings app, select Battery->Launch, and in the next screen set KFGapp to manual control, but leave all other boxes enabled!</string>
    <string name="battery_opt_vendor_specific">The manufacturer of your device has made additional changes in the Android system, which make it impossible for some apps to run in the background. For the proper function of KFGapp please add this app to the list of the exceptions on the next screen (the list with the fewer apps, probably)</string>
    <string name="battery_opt_err_vendor_specific">Oh no, it did not work :(. Please open the Settings or Device optimizer app and try to find the proper settings manually, otherwise KFGapp will not work properly :(</string>
    <string name="url_updated">The Napló (GYIA) URL has been updated!</string>
    <string name="only_gyia_url">The KFGapp can only open GYIA links! \nThey always contain the text "view=v_slip"!</string>
    <string name="night_notifications">Notifications at night</string>
    <string name="ngrades">Grades:  Notification settings</string>
    <string name="ngrades_sum">Configure how new grades should be shown (eg. with vibration, light, sound)</string>
    <string name="nstandins">Stand-Ins:  Notification settings</string>
    <string name="nstandins_sum">Configure how new stand-ins should be shown (eg. with vibration, light, sound)</string>
    <string name="settings">Settings</string>
    <string name="import_gyia">Import GYIA into KFG app</string>
    <string name="override_gyia">Are you sure you want to save this GYIA link to the app, and overwrite the existing link?</string>
    <string name="cancel">Cancel</string>
    <string name="credentials_sum">Click here to edit! Your username is your OM ID by default and your password is your birthdate</string>
    <string name="enter_pwd">Enter your password</string>
    <string name="save_pwd">Save password</string>
    <string name="username">Username</string>
    <string name="incorrect_credentials">EKréta: Incorrect username or password!</string>
    <string name="correct_credentials">Login credentials accepted!</string>
    <string name="try_login">Attempt login</string>
    <string name="save_date">Registered: </string>
    <string name="ekreta_new">This new version of KFGapp does not support the old Napló fro now on. Please open the app to login into E-Kréta!</string>
    <string name="open_app">Open app</string>
    <string name="shortcut">Toggle shortcut</string>
    <string name="shortcut_on">Shortcut added to homescreen</string>
    <string name="shortcut_off">Shortcut removed from homescreen</string>
    <string name="timetable">Timetable</string>
    <string name="prev_day">Previous day</string>
    <string name="next_day">Next day</string>
    <string name="db_error">An error occurred in the database! Please press the refresh button or wipe app data in the settings!</string>
    <string name="missing_timetable_on_day">No timetable is available for the chosen day</string>
    <string name="change_password">Since your login credentials are easily accessible to many ppl, it is strongly recommended to change your password in the desktop E-Kréta!</string>
    <string name="warning">Warning</string>
    <string name="autoignore">Ignore irrelevant lessons</string>
    <string name="autoignore_sum">Automatically ignore irrelevant lessons based on your timetable.
        If you don\'t have the subject in the given period, you will not be notified (experimental)</string>
    <string name="no_lessons_on_day">&lt;div align="center" style="text-align:center;">&#8230;&lt;br/>&lt;br/>&lt;br/>&lt;b>&lt;big>It looks like &lt;br/>you have no lessons on this day!&lt;/big>&lt;/b>&lt;/div></string>
    <string name="hide_grades_warning">This function works incorrectly on some devices (eg. Huawei). If the icon of the program disappears and you cannot open it, please remove and reinstall KFGNapló from Google Play!</string>
    <string name="absences">Absences</string>
    <string name="toggle_light_theme">Toggle light &amp; dark theme</string>
    <string name="title_activity_absences">\@string/absences</string>
    <string name="no_absences">&lt;div align="center" style="text-align:center;">&#8230;&lt;br/>&lt;br/>&lt;br/>&lt;b>&lt;big>It looks like &lt;br/>you have no absences!&lt;/big>&lt;/b>&lt;/div></string>
    <string name="login_credentials">Edit username/password</string>
    <string name="password">Password</string>
    <string name="incorrect_class">Incorrect class</string>
    <string name="other_settings">Other settings</string>
</resources>
