<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/prev_day"
        android:icon="@drawable/chevron_left"
        android:showAsAction="always"
        android:title="@string/prev_day" />

    <item
        android:id="@+id/next_day"
        android:icon="@drawable/chevron_right"
        android:showAsAction="always"
        android:title="@string/next_day" />

    <item
        android:id="@+id/refresh_timetable"
        android:icon="@drawable/refresh"
        android:showAsAction="ifRoom"
        android:title="@string/refresh" />

    <!--item
        android:id="@+id/infomenu_timetable"
        android:icon="@drawable/information"
        android:showAsAction="ifRoom"
        android:title="@string/info" /-->
</menu>